--- a/commissioner.html
+++ b/commissioner.html
@@ -198,13 +198,13 @@
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
@@ -215,25 +215,25 @@
     <div class="title team-title" id="yearrep">Year Reps - Coming Soon</div><br>
     <div class="council-container">
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
@@ -244,66 +244,217 @@
     <div class="title team-title" id="commissioner">Commissioners and Directors</div><br>
     <div class="council-container">
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
-            <div class="council-name">Name Name</div>
-            <div class="council-position">Position</div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-name">Paige Paz</div>
+            <div class="council-position">Speaker</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
-            <div class="council-name">Name Name</div>
-            <div class="council-position">Position</div>
+            <div class="council-photo" style="background-image: url(./img/team/Areej\ Ansari.jpg);"></div>
+            <div class="council-name">Areej Ansari</div>
+            <div class="council-position">EDI Comissioner</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
-            <div class="council-name">Name Name</div>
-            <div class="council-position">Position</div>
+            <div class="council-photo" style="background-image: url(./img/team/Andrew\ Cohoon\ Gallego.jpg);"></div>
+            <div class="council-name">Andrew Cohoon Gallego</div>
+            <div class="council-position">EDI Comissioner</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
-            <div class="council-name">Name Name</div>
-            <div class="council-position">Position</div>
+            <div class="council-photo" style="background-image: url(./img/team/Amelia\ Colborne.jpg);"></div>
+            <div class="council-name">Amelia Colborne</div>
+            <div class="council-position">Creative Director of Merchandise</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
-            <div class="council-name">Name Name</div>
-            <div class="council-position">Position</div>
+            <div class="council-photo" style="background-image: url(./img/team/Tavleen\ Dhindsa.jpeg);"></div>
+            <div class="council-name">Tavleen Dhindsa</div>
+            <div class="council-position">Assets Manager</div>
             <div class="council-description">Description</div>
         </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Amelia\ Jiang.jpg);"></div>
+            <div class="council-name">Amelia Jiang</div>
+            <div class="council-position">Amelia Jiang</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Cereen\ Mohammed.jpg);"></div>
+            <div class="council-name">Cereen Mohammed</div>
+            <div class="council-position">Upper year Social Director</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Omar\ Sayyed.png></div>
+            <div class="council-name">Omar Sayyed</div>
+            <div class="council-position">Charity Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Alex\ Salsali.jpeg);"></div>
+            <div class="council-name">Alex Salsali</div>
+            <div class="council-position">Sports Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-name">Stuart Wing</div>
+            <div class="council-position">Sports Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-name">Myeesha Siddique</div>
+            <div class="council-position">Professional Development Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Sushila\ Chandel.JPG);"></div>
+            <div class="council-name">Shreya Chandel</div>
+            <div class="council-position">Professional Development Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Viduni.jpg);"></div>
+            <div class="council-name">Viduni Weihena Epa</div>
+            <div class="council-position">Career Events Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Andrew\ Grgas.JPG);"></div>
+            <div class="council-name">Andrew Grgas</div>
+            <div class="council-position">Alumni Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-name">Harrison Angellotti</div>
+            <div class="council-position">WEC Co-Chairs</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-name">Courtney Lacroix</div>
+            <div class="council-position">WEC Co-Chairs</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Logan\ Pankiw.jpeg);"></div>
+            <div class="council-name">Logan Pankiw</div>
+            <div class="council-position">Environmental Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Hannah\ Yee.jpg);"></div>
+            <div class="council-name">Hannah yee</div>
+            <div class="council-position">Wellness Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Zane\ Almeida.jpg);"></div>
+            <div class="council-name">Zane Almeida</div>
+            <div class="council-position">Internal Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-name">Lily Meyer</div>
+            <div class="council-position">Purple Arm Editors </div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Jeff.jpg);"></div>
+            <div class="council-name">Jeff St. Jean</div>
+            <div class="council-position">Purple Arm Editors </div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Jovana\ R.jpg);"></div>
+            <div class="council-name">Jovana Rajic</div>
+            <div class="council-position">Yearbook Editor</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-name">Kaitlyn Burghardt</div>
+            <div class="council-position">Yearbook Editor</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Cindy\ Huang.png);"></div>
+            <div class="council-name">Cindy Huang</div>
+            <div class="council-position">Marketing Directors</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Amy\ Pulman.jpeg);"></div>
+            <div class="council-name">Amy Pulman</div>
+            <div class="council-position">Marketing Directors</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Hamida\ Alaribe.jpeg);"></div>
+            <div class="council-name">Hamida Al-Aribe</div>
+            <div class="council-position">Social Media Director</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Yamaan\ Bakir.png);"></div>
+            <div class="council-name">Yamaan Bakir</div>
+            <div class="council-position">Discord Manager</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-name">Victor Zhang</div>
+            <div class="council-position">IT Commissioner</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Nik\ Kovacevic.png);"></div>
+            <div class="council-name">Nik Kovacevic</div>
+            <div class="council-position">-</div>
+            <div class="council-description">Description</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/team/Jennifer\ V.jpg);"></div>
+            <div class="council-name">Jennifer Olivia </div>
+            <div class="council-position">-</div>
+            <div class="council-description">Description</div>
+        </div>
+
     </div>
 
     <!-- Committee Members -->
     <div class="title team-title" id="committee">Committee Members</div><br>
     <div class="council-container">
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
             <div class="council-description">Description</div>
