--- a/team.html
+++ b/team.html
@@ -202,7 +202,7 @@
     <div class="title team-title" id="exec">2021 Executive Team</div><br>
     <div class="team-container">
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
+            <div class="exec-photo" style="background-image: url(./img/team/Chris\ Mohan.jpg)"></div>
             <div class="exec-text">
                 <div class="exec-position">President</div>
                 <div class="exec-name">Chris Mohan</div>
@@ -224,7 +224,7 @@
         </div>
 
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
+            <div class="exec-photo" style="background-image: url(./img/team/Jennifer\ V.jpg)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP Academic</div>
                 <div class="exec-name">Jennifer Villeneuve</div>
@@ -238,7 +238,7 @@
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
+            <div class="exec-photo" style="background-image: url(./img/team/aaron.jpg)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP Communications</div>
                 <div class="exec-name">Aaron Moses</div>
@@ -285,13 +285,13 @@
                 <div class="exec-description">
                     <p>
                         <strong>About Me:</strong><br>
-                        No submission
+                        -
                     </p>
                 </div>
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
+            <div class="exec-photo" style="background-image: url(./img/team/Catriona\ Chan.jpg)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP Social</div>
                 <div class="exec-name">Catriona Chan</div>
