--- a/commissioner.html
+++ b/commissioner.html
@@ -276,7 +276,7 @@
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/Amelia\ Jiang.jpg);"></div>
             <div class="council-name">Amelia Jiang</div>
-            <div class="council-position">Amelia Jiang</div>
+            <div class="council-position">Store Manager</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
@@ -286,7 +286,7 @@
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/team/Omar\ Sayyed.png></div>
+            <div class="council-photo" style="background-image: url(./img/team/Omar\ Sayyed.png);"></div>
             <div class="council-name">Omar Sayyed</div>
             <div class="council-position">Charity Commissioner</div>
             <div class="council-description">Description</div>
