--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@
                 <li><span id="seconds"></span>Seconds</li>
             </ul>
         </div>
+        <br>
+        <a class="cta-button" href="https://www.oweek.ca">Learn About OWeek</a>
     </div>
 
     <hr class="line-break">
