--- a/wellness.html
+++ b/wellness.html
@@ -190,9 +190,8 @@
 
     <!-- WELLNESS -->
     <div class="wellness-container">
-        <img class="wellness-logo" src="img/">
-        <div class="title wellness-title">Wellness Force</div><br>
         <div class="wellness-about">
+            <img class="wellness-logo" src="img/wellness_force_logo.jpg">
             <div class="title">About the Wellness Force</div>
             The UES Wellness Force is a committee dedicated to encouraging Western Engineering students to practice
             well-being through social media, events, and by sharing key resources. We want to be able to help you
@@ -210,29 +209,37 @@
 
         <div class="wellness-resources">
             <div class="title">Resources</div>
-            <strong>In Crisis:</strong> If you need help now, call Reach Out at 1 (866) 933-2023. Reach Out is a 24/7 crisis response
+            <strong>In Crisis:</strong> 
+            <br> If you need help now, call Reach Out at 1 (866) 933-2023. Reach Out is a 24/7 crisis response
             service. Additional resources and options can be found <a href="https://www.uwo.ca/health/psych/crisis_counselling.html">here</a>.
             <br><br>
-            <strong>Refer Yourself:</strong> Western offers a variety of mental health services, including counselling and support groups
+            <strong>Refer Yourself:</strong> 
+            <br> Western offers a variety of mental health services, including counselling and support groups
             for grief, eating disorders, and much more. If you are struggling or feel overwhelmed, check out <a href="https://www.uwo.ca/health/enhance_wellness/index.html">this link</a>.
             <br><br>
-            <strong>Refer Others:</strong> If someone you know is displaying direct or indirect references to suicide, threats,
+            <strong>Refer Others:</strong> 
+            <br> If someone you know is displaying direct or indirect references to suicide, threats,
             disruptive behaviours, disordered eating, or drug and alcohol misuse, refer them to get help through the
             <a href="https://www.uwo.ca/health/mental_wellbeing/others/referrals.html">following steps</a>.
             <br><br>
-            <strong>Additional Mental Health Resources:</strong> If this is not a crisis, check out <a href="https://www.uwo.ca/health/mental_wellbeing/resources.html">this link</a> to see all of the options
+            <strong>Additional Mental Health Resources:</strong> 
+            <br> If this is not a crisis, check out <a href="https://www.uwo.ca/health/mental_wellbeing/resources.html">this link</a> to see all of the options
             made available to you.
             <br><br>
-            <strong>Intramurals:</strong> Western offers a variety of intramurals, including innertube water polo, hockey, dodgeball, and
+            <strong>Intramurals:</strong> 
+            <br> Western offers a variety of intramurals, including innertube water polo, hockey, dodgeball, and
             more. Register and view your options <a href="https://www.uwo.ca/campusrec/intramurals/how_to_register.html">here</a>.
             <br><br>
-            <strong>Rec Centre Classes:</strong> Western offers a variety of exercise classes you can sign up for, including fitness
+            <strong>Rec Centre Classes:</strong> 
+            <br> Western offers a variety of exercise classes you can sign up for, including fitness
             classes, dance classes, aquatic classes, and so much more. Check out your options <a href="https://www.uwo.ca/campusrec/programs/index.html">here.</a>
             <br><br>
-            <strong>Rec Center Information:</strong> As a Western student, you can workout in the rec center at no additional cost. Find
+            <strong>Rec Center Information:</strong> 
+            <br> As a Western student, you can workout in the rec center at no additional cost. Find
             out more information about the rec center <a href="https://www.uwo.ca/campusrec/">here</a>.
             <br><br>
-            <strong>Academic and General Support:</strong>Academic and General Support: If you require academic or any additional support, do not hesitate to contact
+            <strong>Academic and General Support:</strong> 
+            <br> Academic and General Support: If you require academic or any additional support, do not hesitate to contact
             Undergraduate Services. You can book an appointment and they will be able to help you. You can find them
             <a href="https://www.eng.uwo.ca/undergraduate/index.html">here</a>.
             <br><br>
@@ -249,9 +256,9 @@
                 <img class="wellness-social-logo" src="./img/fb.png">
                 <div class="wellness-social-text">UES Wellness Force</div>
             </a>
-            <a class="wellness-social-card">
+            <a href="https://wellnessforce.wixsite.com/website" class="wellness-social-card">
                 <img class="wellness-social-logo" src="./img/blog.png">
-                <div class="wellness-social-text">Wellness Blog</div>
+                <div class="wellness-social-text">Our Website</div>
             </a>
             <a class="wellness-social-card">
                 <img class="wellness-social-logo" src="./img/linktree.png">
@@ -261,10 +268,6 @@
                 <img class="wellness-social-logo" src="img/gmail.png" style="filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(353deg) brightness(107%) contrast(107%);">
                 <div class="wellness-social-text">Email us any questions</div>
 
-            </a>
-            <a class="wellness-social-card">
-                <img class="wellness-social-logo" src="img/form.png" style="filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(353deg) brightness(107%) contrast(107%);">
-                <div class="wellness-social-text">Feedback for Us?</div>
             </a>
         </div>
         </div>
