--- a/commissioner.html
+++ b/commissioner.html
@@ -341,13 +341,13 @@
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Harrison Angellotti</div>
-            <div class="council-position">WEC Co-Chairs</div>
+            <div class="council-position">WEC Co-Chair</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
             <div class="council-name">Courtney Lacroix</div>
-            <div class="council-position">WEC Co-Chairs</div>
+            <div class="council-position">WEC Co-Chair</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
@@ -395,13 +395,13 @@
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/Cindy\ Huang.png);"></div>
             <div class="council-name">Cindy Huang</div>
-            <div class="council-position">Marketing Directors</div>
+            <div class="council-position">Marketing Director</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/Amy\ Pulman.jpeg);"></div>
             <div class="council-name">Amy Pulman</div>
-            <div class="council-position">Marketing Directors</div>
+            <div class="council-position">Marketing Director</div>
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
@@ -429,7 +429,7 @@
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/team/Jennifer\ V.jpg);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/Jennifer\ Oliva.jpeg);"></div>
             <div class="council-name">Jennifer Olivia </div>
             <div class="council-position">-</div>
             <div class="council-description">Description</div>
