courney pic update

--- a/commissioner.html
+++ b/commissioner.html
@@ -321,7 +321,7 @@
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/team/Sushila\ Chandel.JPG);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/Sushila\ Chandel.jfif);"></div>
             <div class="council-name">Shreya Chandel</div>
             <div class="council-position">Professional Development Commissioner</div>
             <div class="council-description">Description</div>
@@ -333,7 +333,7 @@
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/team/Andrew\ Grgas.JPG);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/Andrew\ Grgas.jfif);"></div>
             <div class="council-name">Andrew Grgas</div>
             <div class="council-position">Alumni Commissioner</div>
             <div class="council-description">Description</div>
@@ -345,10 +345,10 @@
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/Lacroix_Courtney.jfif);"></div>
             <div class="council-name">Courtney Lacroix</div>
             <div class="council-position">WEC Co-Chair</div>
-            <div class="council-description">Description</div>
+            <div class="council-description">Hey guys, I'm Courtney Lacroix, and I'm in 3rd year Mechatronics. Some of my favourite things to do (when I'm not dead at school) are sewing, dancing and partying. Follow me on instagram @courtney23_l or email me at clacroi9@uwo.ca ❤</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/team/Logan\ Pankiw.jpeg);"></div>
