--- a/team.html
+++ b/team.html
@@ -289,7 +289,7 @@
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/team/Sneha\ Patel.JPG)"></div>
+            <div class="exec-photo" style="background-image: url(./img/team/Sneha\ Patel.jfif)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP Internal</div>
                 <div class="exec-name">Sneha Patel</div>
