--- a/commissioner.html
+++ b/commissioner.html
@@ -339,7 +339,7 @@
             <div class="council-description">Description</div>
         </div>
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/team/default.png);"></div>
+            <div class="council-photo" style="background-image: url(./img/team/harrison.jpg);"></div>
             <div class="council-name">Harrison Angellotti</div>
             <div class="council-position">WEC Co-Chair</div>
             <div class="council-description">Description</div>
